# kty

./: .clippy.toml  .dockerignore  .envrc.example  .gitignore  .mise.toml  .prettierrc.yaml  .rustfmt.toml  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RELEASE.md  TODO.md  build.rs  cliff.toml  justfile  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: brew.yml  build.yml  check-ff.yml  check.yml  docker.yml  pr.yml  release.yml  signed.yml
docker/: kty.dockerfile  kuberift.dockerfile
docs/: .mise.toml  .prettierrc.yaml  architecture.md  auth.md  deployment.md  next.config.mjs  package.json  tailwind.config.js  theme.config.tsx  tsconfig.json
docs/app/rss.xml/: route.ts
docs/components/: blog.tsx
docs/pages/: _app.tsx  _meta.js  architecture.mdx  auth.mdx  blog.mdx  getting-started.mdx  index.mdx  installation.mdx  metrics.mdx  operations.mdx  usage.mdx
docs/pages/architecture/: access-control.mdx
docs/pages/blog/: 2024-09-19-auth-isnt-hard.mdx  2024-09-30-use-kube-rs.mdx  _meta.tsx
docs/pages/installation/: helm.mdx
docs/pages/legal/: _meta.js  privacy.mdx  toc.mdx
docs/styles/: globals.css
helm/: Chart.yaml  README.md  getting-started.yaml  values.yaml
helm/charts/: gateway-helm-v1.1.0.tgz
helm/templates/: _helpers.tpl  gateway.yaml  rbac.yaml  server.yaml
kustomize/: kustomization.yaml  rbac.yaml  server.yaml
resources/: account.yaml  binding.yaml  key.yaml  role.yaml  server.yaml  service.yaml
src/: broadcast.rs  cli.rs  dashboard.rs  events.rs  fx.rs  health.rs  identity.rs  io.rs  main.rs  openid.rs  resources.rs  ssh.rs  widget.rs
src/cli/: certificate.rs  dashboard.rs  dev.rs  resources.rs  root.rs  serve.rs  users.rs
src/cli/dev/: agent.rs  authz.rs  dashboard.rs  graph.rs  shell.rs  stdin.rs
src/dashboard/: table.rs
src/fx/: wipe.rs
src/identity/: key.rs  user.rs
src/io/: backend.rs
src/resources/: age.rs  container.rs  file.rs  install.rs  node.rs  pod.rs  refs.rs  status.rs  store.rs  stream.rs  tunnel.rs
src/resources/container/: file.rs
src/resources/pod/: graph.rs  proc.rs
src/resources/tunnel/: egress.rs  ingress.rs
src/ssh/: session.rs
src/ssh/session/: metrics.rs  sftp.rs  state.rs
src/widget/: apex.rs  container.rs  debug.rs  effect.rs  error.rs  filter.rs  graph.rs  input.rs  loading.rs  log.rs  nav.rs  node.rs  pod.rs  table.rs  tabs.rs  tunnel.rs  view.rs  viewport.rs  yaml.rs
src/widget/graph/: line.rs  node.rs  placement.rs
src/widget/pod/: shell.rs
