[package]
name = "kty"
version.workspace = true
authors.workspace = true
description = "SSH into Kubernetes"
homepage.workspace = true
documentation.workspace = true
license-file.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
version = "0.0.0-UNSTABLE"
authors = ["Thomas Rampelberg <thomas@saunter.org>"]
homepage = "https://kty.dev"
documentation = "https://kty.dev"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/grampelberg/kty"
keywords = ["cli", "kubernetes", "ssh", "tui", "terminal"]
categories = ["command-line-interface", "development-tools", "virtualization"]

[dependencies]
ansi-to-tui = "6.0.0"
async-trait = "0.1.82"
base64 = "0.22.1"
bon = "2.3.0"
cata = { version = "0.1.1" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
clap-verbosity-flag = "2.2.1"
clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", default-features = false, features = [
    "event-stream",
    "events",
] }
derive_builder = { version = "0.20.1", features = ["clippy"] }
eyre = "0.6.12"
fast_qr = "0.12.5"
futures = "0.3.30"
hostname = "0.4.0"
humantime = "2.1.0"
itertools = "0.13.0"
json-patch = "2.0.0"
json_value_merge = "2.0.0"
jsonwebtoken = "9.3.0"
k8s-openapi = { version = "0.23.0", features = ["earliest"] }
kube = { version = "0.95.0", features = ["derive", "runtime", "ws"] }
lazy_static = "1.5.0"
local-ip-address = "0.6.3"
mio = "1.0.2"
ndarray = "0.16.1"
petgraph = "0.6.5"
pkcs8 = "0.10.2"
prometheus = "0.13.4"
prometheus-static-metric = "0.5.1"
ratatui = { version = "0.28.1", features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
regex = "1.10.6"
replace_with = "0.1.7"
reqwest = { version = "0.12.7", features = ["json", "stream", "multipart"] }
ringbuffer = "0.15.0"
russh = "0.45.0"
russh-keys = "0.45.0"
russh-sftp = "2.0.3"
rust-embed = "8.5.0"
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.34"
ssh-key = "0.6.6"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
syntect = "5.2.0"
syntect-tui = "3.0.4"
tachyonfx = "0.7.0"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["io-util"] }
tracing = "0.1.40"
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
umask = "2.1.0"
warp = "0.3.7"


[lints]
workspace = true

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"

[workspace.lints.rust]
missing_docs = "warn"
keyword-idents = "warn"
let-underscore = "warn"
rust-2024-compatibility = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
multiple_crate_versions = "warn"
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
